Overflow in mobile version fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,9 @@ a:hover {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
-
+p{
+  overflow-wrap: break-word;
+}
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
